--- a/drone.yaml
+++ b/drone.yaml
@@ -5,7 +5,15 @@ steps:
   image: maven:3.6.3-openjdk-11
   #image: parthsharma97/maven #Docker Private Repo
   commands:
-  - mvn clean install package -Dmaven.test.skip=true -Dpmd.failOnViolation=false
+  - mvn clean package sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=parthsharma97 -Dsonar.login=f66492db524c8ba5584e18b3515251f1a7f7b712 -Dmaven.test.skip=true -Dpmd.failOnViolation=false
+ 
+- name: code-analysis
+  image: aosapps/drone-sonar-plugin
+  settings:
+    sonar_host:
+      from_secret: sonar_host
+    sonar_token:
+      from_secret: sonar_token
 
 - name: docker  
   image: plugins/docker
