Updating Project Key

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=parthsharma97_Sonar-JFrog
+sonar.projectKey=parthsharma97:Sonar-JFrog
 # For DroneCI mandatory field
 sonar.organization=parthsharma97
 
