--- a/drone.yaml
+++ b/drone.yaml
@@ -15,11 +15,11 @@ steps:
     sonar_token:
       from_secret: sonar_token
 
-- name: docker  
-  image: plugins/docker
-  settings:
-    username: parthsharma97
-    password: P@rth123$
-    repo: parthsharma97/droneci
+# - name: docker  
+#   image: plugins/docker
+#   settings:
+#     username: parthsharma97
+#     password: P@rth123$
+#     repo: parthsharma97/droneci
 image_pull_secrets:
 - dockerconfigjson # ~/.docker/config.json file auth tag value
