--- a/drone.yaml
+++ b/drone.yaml
@@ -3,7 +3,7 @@ name: default
 steps:
 - name: build
 #   image: maven:3.6.3-openjdk-11
-  image: parthsharma97/maven
+  image: docker-local/parthsharma97/maven/latest/
   commands:
   - mvn clean package sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=parthsharma97 -Dsonar.login=f66492db524c8ba5584e18b3515251f1a7f7b712 -Dmaven.test.skip=true -Dpmd.failOnViolation=false
  
@@ -14,12 +14,5 @@ steps:
       from_secret: sonar_host
     sonar_token:
       from_secret: sonar_token
-
-# - name: docker  
-#   image: plugins/docker
-#   settings:
-#     username: parthsharma97
-#     password: P@rth123$
-#     repo: parthsharma97/droneci
 image_pull_secrets:
 - dockerconfigjson # ~/.docker/config.json file auth tag value
