--- a/drone.yaml
+++ b/drone.yaml
@@ -3,7 +3,8 @@ name: default
 steps:
 - name: build
 #   image: maven:3.6.3-openjdk-11
-  image: docker-local/parthsharma97/maven/latest/
+#   image: docker-local/parthsharma97/maven/latest/
+  image: https://droneci.jfrog.io/artifactory/docker-local/parthsharma97/maven/latest
   commands:
   - mvn clean package sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=parthsharma97 -Dsonar.login=f66492db524c8ba5584e18b3515251f1a7f7b712 -Dmaven.test.skip=true -Dpmd.failOnViolation=false
  
