--- a/drone.yaml
+++ b/drone.yaml
@@ -9,7 +9,8 @@ steps:
   - mvn clean package sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=parthsharma97 -Dsonar.login=f66492db524c8ba5584e18b3515251f1a7f7b712 -Dmaven.test.skip=true -Dpmd.failOnViolation=false
  
 - name: code-analysis
-  image: aosapps/drone-sonar-plugin
+#   image: aosapps/drone-sonar-plugin
+  image: droneci.jfrog.io/docker-local/aosapps/drone-sonar-plugin
   settings:
     sonar_host:
       from_secret: sonar_host
