--- a/drone.yaml
+++ b/drone.yaml
@@ -4,13 +4,13 @@ steps:
 - name: build
 #   image: maven:3.6.3-openjdk-11
 #   image: docker-local/parthsharma97/maven/latest/
-  image: droneci.jfrog.io/docker-local/parthsharma97/maven
+  image: droneci.jfrog.io/docker-local/parthsharma97/maven # JFrog Private Repo
   commands:
   - mvn clean package sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=parthsharma97 -Dsonar.login=f66492db524c8ba5584e18b3515251f1a7f7b712 -Dmaven.test.skip=true -Dpmd.failOnViolation=false
  
 - name: code-analysis
 #   image: aosapps/drone-sonar-plugin
-  image: droneci.jfrog.io/docker-local/aosapps/drone-sonar-plugin
+  image: droneci.jfrog.io/docker-local/aosapps/drone-sonar-plugin # JFrog Private Repo
   settings:
     sonar_host:
       from_secret: sonar_host
