--- a/drone.yaml
+++ b/drone.yaml
@@ -2,7 +2,7 @@ kind: pipeline
 name: default
 steps:
 - name: build
-#   image: maven:3.6.3-openjdk-11
+#   image: maven:3.6.3-openjdk-11w
 #   image: docker-local/parthsharma97/maven/latest/
   image: droneci.jfrog.io/docker-local/parthsharma97/maven # JFrog Private Repo
   commands:
